regressions/marans/SemanticErrors/sameField.ic
//output: Failed.

class Merp {
      int a;
      int a;
}